	"umount --fake ..." to update /etc/mtab

	* Added --disable-legacy-umount option to configure.  This
	disables the runtime checking of umount(8) version.  When built
	with this option then "fusermount -u" will fail if umount(8)
	doesn't support the --fake and --no-canonicalize options.

	* Fix fuse_buf_copy() if already at the end of the buffers

2010-10-14  Miklos Szeredi <miklos@szeredi.hu>

	* Use LTLIBICONV when linking libfuse.  This fixes building against
	uclibc + libiconv.  Patch by Natanael Copa

2010-10-05  Miklos Szeredi <miklos@szeredi.hu>

	* Add missing argument check in ulockmgr.c to prevent calling
	ulockmgr_server with illegal arguments. This would cause an ever
	growing list of ulockmgr_server processes with an endless list of
	open files which finally exceeds the open file handle limit.
	Patch by Markus Ammer

2010-09-28  Miklos Szeredi <miklos@szeredi.hu>

	* Fix option escaping for fusermount.  If the "fsname=" option
	contained a comma then the option parser in fusermount was
	confused (Novell bugzilla #641480).  Fix by escaping commas when
	passing them over to fusermount.  Reported by Jan Engelhardt

2010-08-27  Miklos Szeredi <miklos@szeredi.hu>

	* Add NetBSD support.  Patch from Emmanuel Dreyfus

2010-07-12  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: add buffer interface.  Add a generic buffer interface
	for use with I/O.  Buffer vectors are supplied and each buffer in
	the vector may be a memory pointer or a file descriptor.

	* The fuse_reply_fd() interface is converted to using buffers.

2010-06-23  Miklos Szeredi <miklos@szeredi.hu>

	* Make the number of max background requests and congestion
	threshold tunable.  New options are "max_background" and
	"congestion_threshold".  Only effective on linux kernel versions
	2.6.32 or greater.  Patch by Csaba Henk

2010-06-17  Miklos Szeredi <miklos@szeredi.hu>

	* Add fuse_reply_fd() reply function to the low level interface.