@@ -185,6 +185,8 @@ FUSE_2.9 {
 		fuse_buf_copy;
 		fuse_buf_size;
 		fuse_reply_data;
+		fuse_session_process_buf;
+		fuse_session_receive_buf;
 
 	local:
 		*;
